@@ -142,12 +142,12 @@ You can install them <a href="#download">the same way</a> as you would install
 totem. Some information about the gstreamer-plugins packages
 can be found <a href="http://gstreamer.freedesktop.org/documentation/splitup.html">here</a>.</p>
 <ul>
-  <li><b>gst-plugins-base</b><br />an essential exemplary set of elements</li>   
-  <li><b>gst-plugins-good</b><br />a set of good-quality plug-ins under our preferred license</li>  
-  <li><b>gst-plugins-ugly</b><br />a set of good-quality plug-ins that might pose distribution problems</li>  
-  <li><b>gst-plugins-bad</b><br />a set of plug-ins that need more quality</li>  
-  <li><b>gst-ffmpeg</b><br />FFmpeg-based plug-in</li>
-  <li><b><a href="http://ronald.bitfreak.net/pitfdll.php">Pitfdll</a></b><br />With this plugin, people can playback proprietary file formats for which no free software implementation exists yet.</li>
+  <li><b>gst-plugins-base</b><br />the basic and essential plug-ins for GStreamer</li>   
+  <li><b>gst-plugins-good</b><br />the plug-ins for most Open formats</li>  
+  <li><b>gst-plugins-ugly</b><br />good-quality plug-ins that might pose distribution problems, needed for <b>DVD playback</b></li>
+  <li><b>gst-plugins-bad</b><br />a set of plug-ins that need more work</li>  
+  <li><b>gst-ffmpeg</b><br />FFmpeg-based plug-in, contains all the basic decoders for popular codecs, such as DivX and WMV</li>
+  <li><b><a href="http://ronald.bitfreak.net/pitfdll.php">Pitfdll</a></b><br />Plug-ins using the Windows codec DLLs for which no free software implementation exists yet.</li>
 </ul>
 
 <h2>xine-lib</h2>
