@@ -1,3 +1,8 @@
+2008-02-07  Bastien Nocera  <hadess@hadess.net>
+
+	* index.html: Update web page to mention which
+	plugins are needed for DVD playback (Closes: #478965)
+
 2008-01-07  Bastien Nocera  <hadess@hadess.net>
 
 	* index.html: Update sponsor statuses
